fixed spacing for table editing which was effecting other tables

--- a/style.css
+++ b/style.css
@@ -300,11 +300,7 @@ tbody th, tbody td
 	padding: 5px;
 }
 
-#tableContent, tr
-{
-	height: 80px;
-}
-.tableHeaders
+.statusTableHeaders
 {
 	padding-right:20px;
 	width: 75px;
